Add: 1) links on buttons. 2) another component called "button_resume" to handle the download.

--- a/src/app/data_projects.json
+++ b/src/app/data_projects.json
@@ -3,12 +3,14 @@
     "id": 1,
     "title": "Unimarket",
     "description": "App diseñada para comprar, vender y compartir material académico universitario.",
-    "tech": ["React", "Next", "Node", "Express", "MySQL"]
+    "tech": ["React", "Next", "Node", "Express", "MySQL"],
+    "link": "https://github.com/fernandozarate07/summaries-app-back"
   },
   {
     "id": 2,
     "title": "Protoprogramadores",
     "description": "Agencia especializada en branding, diseño y desarrollo web.",
-    "tech": ["React", "Next"]
+    "tech": ["React", "Next"],
+    "link": "https://github.com/fernandozarate07/protoprogramadores"
   }
 ]
