Add techStack section.

--- a/src/app/data_projects.json
+++ b/src/app/data_projects.json
@@ -7,7 +7,7 @@
     "link_app": null,
     "link_frontend": "https://github.com/fernandozarate07/unexo_frontend",
     "link_backend": "https://github.com/fernandozarate07/unexo_backend",
-    "link_video": null
+    "link_video": "/unexo.mp4"
   },
   {
     "id": 2,
